ERROR.txt
stable.h:15:3: error: unknown type name ‘bool’
   bool isinit;
   ^
stable.h:25:30: error: ‘TABLE_SIZE’ undeclared here (not in a function)
 typedef tLTableItem *localTS[TABLE_SIZE];
                              ^
stable.h:33:3: error: unknown type name ‘bool’
   bool isdef;
   ^
stable.h:35:12: warning: type defaults to ‘int’ in declaration of ‘LTable’
   localTS *LTable;
            ^
stable.h:36:3: error: unknown type name ‘TinstList’
   TinstList *LInstr;
   ^
stable.h:59:27: warning: type defaults to ‘int’ in declaration of ‘T’
 int GtableInit (globalTS *T);
                           ^
stable.h:60:27: warning: type defaults to ‘int’ in declaration of ‘T’
 int GtableFree (globalTS *T);
                           ^
stable.h:67:29: warning: type defaults to ‘int’ in declaration of ‘T’
 int GtableInsert (globalTS *T, string *key, int funcType);
                             ^
stable.h:69:33: warning: type defaults to ‘int’ in declaration of ‘T’
 tGData* GtableSearch (globalTS *T, string *key);
                                 ^
stable.h:70:34: warning: type defaults to ‘int’ in declaration of ‘T’
 int GtableInsertParam (globalTS *T, string *funcID, string *parID, int parType);
                                  ^
stable.h:71:32: warning: type defaults to ‘int’ in declaration of ‘T’
 int GtableInsertVar (globalTS *T, string *funcID, string *varID, int varType);
                                ^
stable.h:72:35: warning: type defaults to ‘int’ in declaration of ‘T’
 int GtableInsertVarVal (globalTS *T, string *funcID, string *varID, Tvalue v);
                                   ^
stable.h:73:34: warning: type defaults to ‘int’ in declaration of ‘T’
 int GtableInsertInstr (globalTS *T, string *funcID, Tinst *instrukce);
                                  ^
stable.h:73:53: error: unknown type name ‘Tinst’
 int GtableInsertInstr (globalTS *T, string *funcID, Tinst *instrukce);
                                                     ^
stable.h:80:26: warning: type defaults to ‘int’ in declaration of ‘T’
 int LtableInit (localTS *T);
                          ^
stable.h:81:26: warning: type defaults to ‘int’ in declaration of ‘T’
 int LtableFree (localTS *T);
                          ^
stable.h:85:28: warning: type defaults to ‘int’ in declaration of ‘T’
 int LtableInsert (localTS *T, string *key, int varType);
                            ^
stable.h:87:32: warning: type defaults to ‘int’ in declaration of ‘T’
 tLData* LtableSearch (localTS *T, string *key);
                                ^
stable.h:88:33: warning: type defaults to ‘int’ in declaration of ‘T’
 int LtableInsertValue (localTS *T, string *key, Tvalue v);
                                 ^
3ac.c: In function ‘genInstr’:
3ac.c:26:5: warning: function returns address of local variable [-Wreturn-local-addr]
     return &TItem;
     ^
make: *** [3ac.o] Error 1

